install revpi_buster_fix_pictory.sh to /usr/sbin
revpi_buster_fix_pictory.sh added to revpi-tools.install
otherwise the debian package won't contain the script.
Install the script to /usr/sbin once the package will be installed.

Signed-off-by: Frank Pavlic <f.pavlic@kunbus.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+revpi-tools (1.0.15-2) stable; urgency=medium
+
+  * install revpi_buster_fix_pictory.sh to /usr/sbin
+
+ -- Frank Pavlic <f.pavlic@kunbus.com>  Wed, 30 Jun 2021 07:27:15 +0200
+
 revpi-tools (1.0.15-1) stable; urgency=medium
 
   [ Philipp Rosenberger ]
