--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+revpi-tools (1.0.16-1) stable; urgency=medium
+
+  * Make the device matching in udev rules more robust
+  * Remove executeable permission bits from none exec files
+  * Use $(...) notation instead of legacy backticks
+  * Use ip (iproute2) instead of ifconfig (net-tools)
+  * Append -quriks to pileft/piright.service file names
+  * Change links to revolutionpi.com
+  * Add support for RevPi Core SE and Connect SE
+
+ -- Philipp Rosenberger <p.rosenberger@kunbus.com>  Tue, 12 Apr 2022 15:17:46 +0200
+
 revpi-tools (1.0.15-2) stable; urgency=medium
 
   [ Frank Pavlic ]
