--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+revpi-tools (2.0.1-2) buster; urgency=medium
+
+  * Fix an upgrade issue when using apt-get upgrade
+
+ -- Philipp Rosenberger <p.rosenberger@kunbus.com>  Wed, 11 Jan 2023 14:38:35 +0100
+
 revpi-tools (2.0.1-1) buster; urgency=medium
 
   [ Nicolai Buchwitz ]
