--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+revpi-tools (3.1.0-1+revpi11+1) bullseye; urgency=medium
+
+  [ Sven Sager ]
+  * docs: Update resize-fs script documentation
+
+  [ Philipp Rosenberger ]
+  * Build the eeprom file in the correct subdirectory
+  * Fix issue with ethtool from Bullseye
+  * Add a script to write the eeprom of the network devices
+  * Add support to flash the eeprom of  LAN7800 devices
+
+  [ Nicolai Buchwitz ]
+  * Merge KS8851 mac address tool into revpi-set-mac
+
+  [ Holger Jorra ]
+  * Add script to set MAC addresses on Connect4
+  * Fix Connect4 MAC addresses with udev rule
+  * Apply GNUInstallDirs to udev rule
+
+  [ Philipp Rosenberger ]
+  * build: Use pkg-config for services install path
+  * build: Use pkg-config to install udev rules
+  * Add systemd, udev and pkg-config to Build-Depends
+
+ -- Philipp Rosenberger <p.rosenberger@kunbus.com>  Wed, 24 May 2023 17:46:30 +0200
+
 revpi-tools (3.0.1-1+revpi11+1) bullseye; urgency=medium
 
   * fix: Set execute permission to script files
