--- a/revpi-config/revpi-config.1
+++ b/revpi-config/revpi-config.1
@@ -117,3 +117,8 @@ Enable built-in WLAN interface using rfkill(8).  (Default is enabled.)
 .SH SEE ALSO
 For more information on Revolution Pi visit
 .IR https://revolutionpi.com
+.TP
+.B external-antenna
+Controls the use of the external antenna on a Revolution Pi with CM4 module.
+After activating this option, the external antenna is used. When this option
+is deactivated, the CM4 module falls back to the internal antenna by default.
