feat(revpi-config): Enable and Disable AVAHI daemon
Add the `avahi` service to revpi-config script, to enable and disable
the service on all Revolution Pi's with installed avahi-daemon package.

The name `avahi` without the ending `-daemon` is deliberately chosen,
because dependencies such as SystemD sockets are also adjusted in the
respective enable / disable process.

Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/revpi-config/revpi-config.1
+++ b/revpi-config/revpi-config.1
@@ -109,6 +109,12 @@ Start daemon to load and monitor a RevPiModIO application, serve the
 piControl process image to RevPiNetIO, serve a configuration GUI and
 publish IO values via MQTT.  (Default is disabled.)
 .TP
+.B avahi
+Avahi is a system which facilitates service discovery on a local network via
+the mDNS/DNS-SD protocol. This enables you to plug your computer into a
+network and instantly be able to view other Revolution Pi's (this is also
+branded as "Bonjour" and sometimes "Zeroconf").
+.TP
 .B bluetooth
 Enable built-in Bluetooth interface using rfkill(8).  (Default is enabled.)
 .TP
