--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+revpi-tools (3.2.0-1+revpi11+1) bullseye; urgency=medium
+
+  [ Sven Sager ]
+  * fix(revpi-config): Set correct order for systemctl for enable / disable
+    a service file
+  * feat(revpi-config): Control antenna use on a cm4 module
+  * feat(revpi-config): Enable and Disable AVAHI daemon
+
+  [ Thomas Böhler ]
+  * refactor: Use rpi_type() for is_cm3() as well
+
+ -- Sven Sager <s.sager@kunbus.com>  Tue, 18 Jul 2023 15:40:53 +0200
+
 revpi-tools (3.1.3-1+revpi11+1) bullseye; urgency=medium
 
   * fix: Ensure that pileft and piright are brought up
