--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+revpi-tools (3.3.0-1+revpi11+1) bullseye; urgency=medium
+
+  [ Nicolai Buchwitz ]
+  * fix(revpi-config): Repair dtparam handling
+  * feat(revpi-config): Enable perf-governor and downclock-cpu for CM4 too
+
+ -- Thomas Böhler <t.boehler@kunbus.com>  Fri, 21 Jul 2023 11:53:42 +0200
+
 revpi-tools (3.2.0-1+revpi11+1) bullseye; urgency=medium
 
   [ Sven Sager ]
