chore: Add license information for REUSE
The creation date of all files isn't known as the trail ends with an
import from SVN, for example.
Instead, find the earliest reference of each file and take that as the
start copyright year.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/examples-watchdog/README
+++ b/examples-watchdog/README
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2021-2023 KUNBUS GmbH
+ *
+ * SPDX-License-Identifier: GPL-2.0-or-later
+ */
+
 How to use the watchdog on the RevPi Connect to also powercycle the relay
 
 The FTDI EEPROM is patched as follows during factory end-of-line test
