--- a/revpi-config/revpi-config.1
+++ b/revpi-config/revpi-config.1
@@ -1,5 +1,7 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.\" (C) Copyright 2016-2024 KUNBUS GmbH
+.\" SPDX-License-Identifier: GPL-2.0-or-later
+.\" 
+.\" SPDX-FileCopyrightText: 2016-2024 KUNBUS GmbH
 .\"
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
