fix: Use /boot/firmware instead of /boot
With bookworm the boot partition lives at /boot/firmware instead of
/boot previously.
revpi-factory-reset should be updated to reflect this change.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/revpi-config/revpi-config.1
+++ b/revpi-config/revpi-config.1
@@ -25,10 +25,10 @@ revpi-config \- enable and disable features on a RevPi
 .B revpi-config enable | disable | status | available | availstat <feature>
 .SH DESCRIPTION
 .B revpi-config
-allows enabling and disabling specific settings in /boot/config.txt as well as
-systemd services on a RevPi.  It also allows querying the status (whether
-enabled) and availability (whether installed) of each feature and will convey
-the result on standard output (1 or 0).
+allows enabling and disabling specific settings in /boot/firmware/config.txt as
+well as systemd services on a RevPi.  It also allows querying the status
+(whether enabled) and availability (whether installed) of each feature and will
+convey the result on standard output (1 or 0).
 
 The availability and status of a feature can also be queried simultaneously
 using the
